# word2vec

./: CMakeLists.txt  README.md  distance.c  word-analogy.c  word-vector.c  word2vec.c
